banking-application-src/src/main/java/org/darksavant/test/bank/error/NotFoundException.java
package org.darksavant.test.bank.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}

